--- a/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
+++ b/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>  </PropertyGroup>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>  
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.4.2" />
