--- a/ImmortalCoordinator/ImmortalCoordinator.csproj
+++ b/ImmortalCoordinator/ImmortalCoordinator.csproj
@@ -97,7 +97,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ambrosia\Ambrosia\Ambrosia.csproj" />
+    <ProjectReference Include="..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+    <ProjectReference Include="..\GenericLogPicker\GenericLogPicker.csproj" />
   </ItemGroup>
 
 </Project>
