--- a/InternalImmortals/PerformanceTestInterruptible/GeneratedSourceFiles/PTIAmbrosiaGeneratedAPI/latest/PTIAmbrosiaGeneratedAPI.csproj
+++ b/InternalImmortals/PerformanceTestInterruptible/GeneratedSourceFiles/PTIAmbrosiaGeneratedAPI/latest/PTIAmbrosiaGeneratedAPI.csproj
@@ -1,11 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
-    <Platforms>x64</Platforms>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.14" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.14" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Microsoft.CRA" Version="2019.10.21.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
@@ -29,5 +26,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager">
       <Version>4.5.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../../../../Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj" />
   </ItemGroup>
 </Project>
