--- a/Ambrosia/Ambrosia/Ambrosia.csproj
+++ b/Ambrosia/Ambrosia/Ambrosia.csproj
@@ -35,7 +35,7 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS</DefineConstants>
@@ -47,7 +47,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS</DefineConstants>
     <Optimize>true</Optimize>    <NoWarn>;2008</NoWarn>
@@ -103,6 +103,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+    <ProjectReference Include="..\..\AzureBlobsLogPicker\AzureBlobsLogPicker.csproj" />
     <ProjectReference Include="..\..\GenericLogPicker\GenericLogPicker.csproj" />
   </ItemGroup>
 </Project>
