--- a/ICGUI/ICGUI/ICGUI.csproj
+++ b/ICGUI/ICGUI/ICGUI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Ambrosia\Ambrosia\Ambrosia.csproj" />
+    <ProjectReference Include="..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
     <ProjectReference Include="..\..\ImmortalCoordinator\ImmortalCoordinator.csproj" />
   </ItemGroup>
 </Project>
