--- a/ICGUI/ICGUI.UWP/ICGUI.UWP.csproj
+++ b/ICGUI/ICGUI.UWP/ICGUI.UWP.csproj
@@ -148,9 +148,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\UWPLogPicker\UWPLogPicker.csproj">
-      <Project>{a5986aff-956d-4e0a-b86f-603086d5e1ab}</Project>
-      <Name>UWPLogPicker</Name>
+    <ProjectReference Include="..\..\AzureBlobsLogPicker\AzureBlobsLogPicker.csproj">
+      <Project>{fe687d17-1499-49b4-99fe-9c30d48afce1}</Project>
+      <Name>AzureBlobsLogPicker</Name>
     </ProjectReference>
     <ProjectReference Include="..\ICGUI\ICGUI.csproj">
       <Project>{51B9AB64-D654-45D2-8F28-A193D3E6D6BA}</Project>
