--- a/Ambrosia.nuspec
+++ b/Ambrosia.nuspec
@@ -22,13 +22,11 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\net46\AmbrosiaLibCS.dll" target="lib\net46" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\net46\AmbrosiaLibCS.pdb" target="lib\net46" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\net46\Ambrosia.exe" target="lib\net46" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\net46\Ambrosia.pdb" target="lib\net46" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\netcoreapp3.1\AmbrosiaLibCS.dll" target="lib\netcoreapp3.1" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\netcoreapp3.1\AmbrosiaLibCS.pdb" target="lib\netcoreapp3.1" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\netcoreapp3.1\Ambrosia.dll" target="lib\netcoreapp3.1" />
-    <file src="Clients\CSharp\AmbrosiaLibCS\bin\x64\$configuration$\netcoreapp3.1\Ambrosia.pdb" target="lib\netcoreapp3.1" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLibCS.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLibCS.pdb" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLib.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\AmbrosiaLib.pdb" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\SharedAmbrosiaTools.dll" target="lib\netstandard2.0" />
+    <file src="Clients\CSharp\AmbrosiaLibCS\bin\$configuration$\netstandard2.0\SharedAmbrosiaTools.pdb" target="lib\netstandard2.0" />
   </files>
 </package>
