--- a/InternalImmortals/PerformanceTestInterruptible/Client/Job.csproj
+++ b/InternalImmortals/PerformanceTestInterruptible/Client/Job.csproj
@@ -29,9 +29,10 @@
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-  </ItemGroup>
+  </ItemGroup>  
   <ItemGroup>
     <ProjectReference Include="..\..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+    <ProjectReference Include="..\..\..\GenericLogPicker\GenericLogPicker.csproj" />
     <ProjectReference Include="..\GeneratedSourceFiles\PTIAmbrosiaGeneratedAPI\latest\PTIAmbrosiaGeneratedAPI.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
