Updated PTI and PT calls to use Core if specified which required change to couple tests too. Updated Help tests to verify the core help as well. Required some helper function changes .

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -13,12 +13,14 @@
     <!-- <add key="TestLogOutputDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Log" /> -->
     <add key="TestLogOutputDirectory" value="D:\AmbrosiaTest\Log" />
 
-    <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\net46" />
-    <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\net46" />
+	<!-- NOTE: based on the flag NetFrameworkTestRun in Utilities.com either net46 or netcoreapp3.1 will be appended to path ” -->
+    <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\" />
+    <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\" />
 
     <!-- NOTE: PT must be deployed as “Debug” due to “state machine changes and our magic library doesn’t work anymore” -->
-    <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\net46" />
-    <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\net46" />
+	<!-- NOTE: based on the flag NetFrameworkTestRun in Utilities.com either net46 or netcoreapp3.1 will be appended to path ” -->
+    <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\" />
+    <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\" />
 
     <add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
     <add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
