--- a/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
+++ b/AzureBlobsLogPicker/AzureBlobsLogPicker.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.2" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
+    <PackageReference Include="Azure.Storage.Common" Version="12.4.3" />
+    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.2.3" />
   </ItemGroup>
 
   <ItemGroup>
