--- a/Ambrosia/Ambrosia/Ambrosia.csproj
+++ b/Ambrosia/Ambrosia/Ambrosia.csproj
@@ -75,4 +75,10 @@
       <Version>4.5.0</Version>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+    <ProjectReference Include="..\..\AzureBlobsLogPicker\AzureBlobsLogPicker.csproj" />
+    <ProjectReference Include="..\..\GenericLogPicker\GenericLogPicker.csproj" />
+  </ItemGroup>
 </Project>
