Revert "Just ambrosia proj in the sln"
This reverts commit b421545bfab0861bf59b17883ad0615ed51af573.

--- a/Ambrosia/Ambrosia/Ambrosia.csproj
+++ b/Ambrosia/Ambrosia/Ambrosia.csproj
@@ -75,4 +75,8 @@
       <Version>4.5.0</Version>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+  </ItemGroup>
 </Project>
