Revert "Just Ambrosia and Ambrosia Lib are part of sln now"
This reverts commit 3c69a6fb2e6ed1790671c01f3037ac69c1e58782.

--- a/Ambrosia/Ambrosia/Ambrosia.csproj
+++ b/Ambrosia/Ambrosia/Ambrosia.csproj
@@ -78,5 +78,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\AmbrosiaLib\Ambrosia\AmbrosiaLib.csproj" />
+    <ProjectReference Include="..\..\AzureBlobsLogPicker\AzureBlobsLogPicker.csproj" />
+    <ProjectReference Include="..\..\GenericLogPicker\GenericLogPicker.csproj" />
   </ItemGroup>
 </Project>
