--- a/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
+++ b/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
@@ -33,4 +33,8 @@
       <Version>2019.10.21.1</Version>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharedAmbrosiaTools\SharedAmbrosiaTools.csproj" />
+  </ItemGroup>
 </Project>
