--- a/Samples/HelloWorld/GeneratedSourceFiles/Client2Interfaces/latest/Client2Interfaces.csproj
+++ b/Samples/HelloWorld/GeneratedSourceFiles/Client2Interfaces/latest/Client2Interfaces.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
-    <Platforms>x64</Platforms>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.16" Condition="'$(Configuration)' == 'Release' " />
