--- a/Samples/HelloWorld/IClient2/IClient2.csproj
+++ b/Samples/HelloWorld/IClient2/IClient2.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
-    <Platforms>x64</Platforms>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>IClient2</AssemblyName>
     <RootNamespace>IClient2</RootNamespace>
   </PropertyGroup>
