--- a/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
+++ b/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
@@ -20,8 +20,10 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Remote.Linq" Version="5.8.2" />
     <PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="5.8.2" />
@@ -29,10 +31,7 @@
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="WindowsAzure.Storage">
-      <Version>9.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CRA" Version="2019.10.21.1" />
+    <PackageReference Include="Microsoft.CRA" Version="2020.9.24.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <PackageReference Include="System.CodeDom">
