--- a/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
+++ b/AmbrosiaLib/Ambrosia/AmbrosiaLib.csproj
@@ -14,7 +14,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
-    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.2.3" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading">
       <Version>15.8.168</Version>
@@ -26,12 +25,14 @@
       <Version>5.8.2</Version>
     </PackageReference>
     <PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="5.8.2" />
+    <PackageReference Include="System.CodeDom" Version="4.5.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="Microsoft.CRA">
-      <Version>2019.10.21.1</Version>
+      <Version>2020.9.24.1</Version>
     </PackageReference>
   </ItemGroup>
 
