Much more functional command shell

--- a/InternalImmortals/XamarinCommandShell/XamarinCommandShell.Android/XamarinCommandShell.Android.csproj
+++ b/InternalImmortals/XamarinCommandShell/XamarinCommandShell.Android/XamarinCommandShell.Android.csproj
@@ -44,7 +44,6 @@
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
-
   <ItemGroup>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
@@ -60,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="OSCommands.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
