--- a/InternalImmortals/XamarinCommandShell/ICommandShellImmortal/ICommandShellImmortal.csproj
+++ b/InternalImmortals/XamarinCommandShell/ICommandShellImmortal/ICommandShellImmortal.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.19" />
+  </ItemGroup>
+
 </Project>
