--- a/InternalImmortals/XamarinCommandShell/XamarinCommandShell.iOS/XamarinCommandShell.iOS.csproj
+++ b/InternalImmortals/XamarinCommandShell/XamarinCommandShell.iOS/XamarinCommandShell.iOS.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
+    <Compile Include="OSCommands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
