Added Code Gen app into Test Framework so now all Javascript Language binding - Code Gen parts are part of the Overall Ambrosia Test sln

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -29,7 +29,7 @@
 		<add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
 
 		<!-- NOTE: Ambrosia Javascript specific values -->
-		<add key="AmbrosiaJavascriptDirectory" value="D:\Ambrosia\AmbrosiaJS" />
+		<add key="AmbrosiaJSCodeGenDirectory" value="..\..\..\..\JSCodeGen" />
 
 		
 	</appSettings>
