Added a bunch of negative tests for JS Code Gen as well as other tests.

--- a/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
+++ b/AmbrosiaTest/AmbrosiaTest/AmbrosiaTest.csproj
@@ -78,6 +78,7 @@
     <Compile Include="AMB_UnitTest.cs" />
     <Compile Include="InProc_Pipe_Test.cs" />
     <Compile Include="InProc_TCP_Test.cs" />
+    <Compile Include="JS_CodeGen_Neg_Tests.cs" />
     <Compile Include="JS_CodeGen_Tests.cs" />
     <Compile Include="MTF_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
