Inital code to test TimeTravel Debugging

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -27,6 +27,7 @@
 		<add key="AmbrosiaLogDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
 		<!-- NOTE: InProc log files are relative to PTI. This directory is relative path from PerfTestJobExeWorkingDirectory -->
 		<add key="PTIAmbrosiaLogDirectory" value="..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
+		<add key="TTDAmbrosiaLogDirectory" value="..\..\..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\AmbrosiaLogs" />
 
 		<!-- NOTE: Ambrosia Javascript specific values -->
 		<add key="AmbrosiaJSCodeGenDirectory" value="..\..\..\..\JSCodeGen" />
